la til jvm-flagg for å følge containerens memory limits